--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.el.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.el.resx
@@ -376,6 +376,6 @@
     <value>Εντοπίστηκε προστατευμένο ή εκτός σύνδεσης ιστολόγιο: {0}.</value>
   </data>
   <data name="PostNotParsable" xml:space="preserve">
-    <value>Μια δημοσίευση από το '{0}' δεν μπορούσε να αναλυθεί. Η ρύθμιση των 'δημοσιεύσεων ανά σελίδα' σε 1 στις Λεπτομέρειες μπορεί να αυξήσει το περιεχόμενο που μπορεί να μεταφορτωθεί.</value>
+    <value>Μια ανάρτηση από το '{0}' δεν ήταν αναλύσιμη. Η ρύθμιση 'αναρτήσεις ανά σελίδα' στις Λεπτομέρειες σε χαμηλότερη τιμή ενδέχεται να αυξήσει το περιεχόμενο με δυνατότητα λήψης.</value>
   </data>
 </root>
