--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.ja.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.ja.resx
@@ -333,6 +333,6 @@
 {0}.</value>
   </data>
   <data name="PostNotParsable" xml:space="preserve">
-    <value>0}」の投稿は解析できませんでした。詳細で「1ページあたりの投稿数」を1にすると、ダウンロード可能なコンテンツが増える可能性があります。</value>
+    <value>'{0}'からの投稿は解析できませんでした。 詳細の「ページあたりの投稿数」を低い値に設定すると、ダウンロード可能なコンテンツが増える可能性があります。</value>
   </data>
 </root>
