--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.ru.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.ru.resx
@@ -327,6 +327,6 @@
 {0}.</value>
   </data>
   <data name="PostNotParsable" xml:space="preserve">
-    <value>Сообщение от '{0}' не было обработано. Установка значения 'posts per page' равным 1 в Подробности может увеличить загружаемое содержимое.</value>
+    <value>Сообщение от '{0}' не поддается синтаксическому анализу. Установка более низкого значения «количества сообщений на страницу» в разделе «Подробности» может увеличить загружаемый контент.</value>
   </data>
 </root>
